[package]
name = "avro-tools"
version = "0.1.1"
authors = ["Daniël Heres <danielheres@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Avro-tools implementation"
documentation = "https://github.com/Dandandan/avro-tools-rust"
repository = "https://github.com/Dandandan/avro-tools-rust"

[dependencies]
avro-rs = "0.6"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3"}
serde_json = {version = "*"}